2010-09-08  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/include/libxnee/xnee_xinput.h: 
	Moved function prototypes outside xinput ifdef

	* libxnee/src/xnee_alloc.c (xnee_free_recordext_setup): 
	free code placed inside NULL checks instead of separate NULL checks

	* libxnee/src/xnee_record.c (xnee_record_handle_event_printer): 
	Discarding motion event if no screen presented

	* libxnee/src/xnee_xinput.c: 
	Stub code for Xinput2 if xinput disabled

	* libxnee/src/Makefile.am:
	* cnee/src/Makefile.am:
	Added xinput enable/disable support

	* configure.in:
	--disable-xinput2 (and enable) added

2010-09-07  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_alloc.c: 
	Updated (c) year

2010-09-07  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/include/libxnee/xnee_settings.h
	(XNEE_NR_OF_XINPUT_DEVICES): 
	Adding XNEE_NR_OF_XINPUT_DEVICES as the max 
	number of xinput devices handled

2010-09-01  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/test/print.c (test_printfuns): 
	Typo fix:  reurn => return
	(main): printf typo and formatting 

	* libxnee/include/libxnee/xnee.h: 
	Including xnee_settings.h to get the nr of xinput devices

2010-08-31  Henrik Sandklef  <hesa@sandklef.com>

	* AUTHORS (Authors): 	
	Added Tuukka Pasanen to contributors

	* libxnee/test/print.c: 
	Added return 0 at the end of some function body
	Added (c) and license notice

	* libxnee/test/test_feedback.c (test_setfeedback): 
	Added return 0 at the end of the function body

	* libxnee/test/test_all.c (test_all): 
	Added return 0 at the end of the function body

	* libxnee/test/libtest.c (test_xnee_data): 
	Added return XNEE_OK at the end
	Added (c) and license notice

	* gnee/src/gnee_xnee.c (gnee_get_grab): 
	Added missing return values

	* cnee/src/main.c (cnee_handle_err): 
	function now returns void 
	we will discard any errors in the function anyway

	* devel-scripts/setup-xi2.sh: 
	Script to setup and unsetup (-d) xinput devices

	* libxnee/src/Makefile.am: